--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 yew = { version = "0.21", features = ["csr"] }
+web-sys = { version = "0.3" , features = ["HtmlInputElement"] }
+gloo-console = "0.3"
