--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 yew = { version = "0.21", features = ["csr"] }
 yew-router = "0.18"
-web-sys = { version = "0.3" , features = ["HtmlInputElement"] }
+web-sys = { version = "0.3" , features = ["HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement"] }
 gloo-console = "0.3"
 gloo-net = "0.5"
 gloo-storage="0.3"
